docs: expand MIGRATION_NOTES.md to full structured audit trail per AAP §0.2.1
Replaces the baseline stub with the complete 11-section migration log
mandated by AAP §0.2.1, §0.4.1, and §0.7.1. Each section is grounded in
specific COBOL/JCL/copybook source citations per AAP §0.8.1 citation
discipline.

Coverage:
- Verbatim AAP §0.7.1 user mandate quoted in header
- §1.2: Resolution table for all 7 AAP §0.7.5 TODO markers
- §1.3: IMPLEMENTATION DECISIONS
  * COACTUPC SYNCPOINT ROLLBACK at [app/cbl/COACTUPC.cbl:L4100]
    (sole rollback in COBOL source) → try/finally with compensating writes
  * CORPT00C CICS TDQ write at [app/cbl/CORPT00C.cbl:L515] (paragraph
    WIRTE-JOBSUB-TDQ) → direct method invocation
  * CSUTLDTC CEEDAYS call at [app/cbl/CSUTLDTC.cbl:L116] → java.time
    LocalDate.parse with ResolverStyle.STRICT
- §1.4: DEVIATIONS
  * CBSTM03A TIOT/TCB/PSA inspection at [app/cbl/CBSTM03A.CBL:L235-L290]
    → no-op stubs (no JVM equivalent for z/OS control blocks)
  * CBSTM03A ALTER/GO TO flow at [app/cbl/CBSTM03A.CBL:L300-L303]
    → explicit state-machine enum
  * UNUSED1Y copybook preserved for completeness
  * DEFCUST.jcl three anomalies (duplicate STEP05, dataset-name
    mismatch, misleading comment) preserved verbatim
  * WIRTE-JOBSUB-TDQ misspelling preserved in Java method name
- §1.5: BEHAVIORAL PARITY PRESERVATIONS
  * Plaintext password (SEC-USR-PWD PIC X(08) at
    [app/cpy/CSUSR01Y.cpy:L21]) preserved
  * COBOL FILE STATUS codes → sealed FileStatus hierarchy
  * Overflow, divide-by-zero, rounding, padding, sign nybble all
    preserved
- §1.6: Golden-record fixture capture procedure + capture-log table
- §1.7: Codepage / EBCDIC IBM-1047 default; per-file overrides
- §1.8: ScopedValue mandated; ThreadLocal forbidden in new code
- §1.9: -XX:+UseCompactObjectHeaders (JEP 519) and Shenandoah
  generational GC (JEP 521) baseline JVM flags
- §1.10: References to AAP sections this file resolves
- §1.11: Open Items (TPS baseline, golden-record captures, in